Solved the layout horizontal shift when opening gallery

--- a/app/assets/stylesheets/ChocoChomp.css
+++ b/app/assets/stylesheets/ChocoChomp.css
@@ -11,7 +11,7 @@ body{
 	/*height: 100%;*/
 	height: 100%;
 	background-image: url('Losange_BGblanc.png');
-	overflow: hidden;
+	overflow-x: auto;
 	/*background: -moz-linear-gradient(100% 100% 90deg, #57483b, #7f6f61);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#7f6f61), to(#57483b)) fixed;*/
 }
